objects/fcio1__Fullcast_Status__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Fullcast_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Fullcast_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>fcio1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Fullcast_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Executed_Policy__c</fullName>
        <label>Executed Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__GTM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GTM</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipName>Fullcast_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Fullcast_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Fullcast_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Policy_Action__c</fullName>
        <label>Policy Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Policy_Status__c</fullName>
        <label>Policy Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fcio1__Policy__c</fullName>
        <label>Policy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fullcast Policy Status</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>fcio1__GTM__c</columns>
        <columns>fcio1__Policy__c</columns>
        <columns>fcio1__Comments__c</columns>
        <columns>fcio1__Account__c</columns>
        <columns>fcio1__Lead__c</columns>
        <columns>fcio1__Contact__c</columns>
        <columns>fcio1__Opportunity__c</columns>
        <columns>fcio1__Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fcio1__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSN-{000}</displayFormat>
        <label>Fullcast Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fullcast Policy Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>